# backports.datetime_fromisoformat

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  module.c  pyproject.toml  setup.py  tests.py  timezone.h  tox.ini
.circleci/: config.yml
.github/workflows/: lint.yml  publish.yml  test.yml
backports/: __init__.py
backports/_datetime_fromisoformat/: _datetimemodule.h  module.c
backports/datetime_fromisoformat/: __init__.py  _datetimemodule.c  module.c  timezone.c
docs/: RELEASING.md
release/: developmental_release.py  test_developmental_release.py
tests/: test_basics.py  tests.py
