[project]
name = "backports-datetime-fromisoformat"
version = "2.0.1b1"
authors = [
  { name="Michael Overmeyer", email="backports@movermeyer.com" },
]
description = "Backport of Python 3.11's datetime.fromisoformat"
readme = "README.rst"
requires-python = ">3"
license = {file = "LICENSE"}
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Homepage = "https://github.com/movermeyer/backports.datetime_fromisoformat"
Documentation = "https://github.com/movermeyer/backports.datetime_fromisoformat"
Repository = "https://github.com/movermeyer/backports.datetime_fromisoformat"
"Bug Tracker" = "https://github.com/movermeyer/backports.datetime_fromisoformat/issues"
Changelog = "https://github.com/movermeyer/backports.datetime_fromisoformat/CHANGELOG.md"
